Add xfail marks to syscollector tests

--- a/api/test/integration/test_rbac_black_syscollector_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_black_syscollector_endpoints.tavern.yaml
@@ -3,6 +3,7 @@ test_name: GET OS SYSCOLLECTOR RBAC
 
 marks:
   - base_tests
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -53,6 +54,9 @@ stages:
 ---
 test_name: GET HARDWARE SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Get hardware from an agent (Allow)
@@ -96,6 +100,9 @@ stages:
 ---
 test_name: GET NETADDR SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Get netaddr from an agent (Allow)
@@ -132,6 +139,9 @@ stages:
 
 ---
 test_name: GET NETIFACE SYSCOLLECTOR RBAC
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -181,6 +191,9 @@ stages:
 ---
 test_name: GET NETPROTO SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Get netiface from an agent (Allow)
@@ -216,6 +229,9 @@ stages:
 
 ---
 test_name: GET PACKAGES SYSCOLLECTOR RBAC
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -263,6 +279,9 @@ stages:
 ---
 test_name: GET PORTS SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Get netiface from an agent (Allow)
@@ -308,6 +327,9 @@ stages:
 
 ---
 test_name: GET PROCESSES SYSCOLLECTOR RBAC
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
