--- a/api/test/integration/test_rbac_white_syscollector_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_white_syscollector_endpoints.tavern.yaml
@@ -3,6 +3,7 @@ test_name: GET OS SYSCOLLECTOR RBAC
 
 marks:
   - rbac_tests
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -56,6 +57,9 @@ stages:
 ---
 test_name: GET HARDWARE SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Get hardware from an agent (Allow)
@@ -99,6 +103,9 @@ stages:
 ---
 test_name: GET NETADDR SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Get netaddr from an agent (Allow)
@@ -135,6 +142,9 @@ stages:
 
 ---
 test_name: GET NETIFACE SYSCOLLECTOR RBAC
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -184,6 +194,9 @@ stages:
 ---
 test_name: GET NETPROTO SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Get netiface from an agent (Allow)
@@ -219,6 +232,9 @@ stages:
 
 ---
 test_name: GET PACKAGES SYSCOLLECTOR RBAC
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -266,6 +282,9 @@ stages:
 ---
 test_name: GET PORTS SYSCOLLECTOR RBAC
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Get netiface from an agent (Allow)
@@ -311,6 +330,9 @@ stages:
 
 ---
 test_name: GET PROCESSES SYSCOLLECTOR RBAC
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
