Add xfail mark to syscollector tests in experimental AIT

--- a/api/test/integration/test_experimental_endpoints.tavern.yaml
+++ b/api/test/integration/test_experimental_endpoints.tavern.yaml
@@ -211,6 +211,9 @@ stages:
 ---
 test_name: GET /experimental/syscollector/netaddr
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Request
@@ -275,6 +278,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/netiface
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -352,6 +358,9 @@ stages:
 ---
 test_name: GET /experimental/syscollector/netproto
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Request
@@ -415,6 +424,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/os
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -489,6 +501,9 @@ stages:
 ---
 test_name: GET /experimental/syscollector/packages
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Request
@@ -529,6 +544,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/ports
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -617,6 +635,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/processes
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
