--- a/api/test/integration/test_rbac_black_experimental_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_black_experimental_endpoints.tavern.yaml
@@ -191,6 +191,9 @@ stages:
 ---
 test_name: GET /experimental/syscollector/hardware
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Request all agents (Partially allowed, user agnostic)
@@ -244,6 +247,9 @@ stages:
 ---
 test_name: GET /experimental/syscollector/netaddr
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Request all agents (Partially allowed, user agnostic)
@@ -288,6 +294,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/netiface
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -334,6 +343,9 @@ stages:
 ---
 test_name: GET /experimental/syscollector/netproto
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Request all agents (Partially allowed, user agnostic)
@@ -378,6 +390,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/os
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -424,6 +439,9 @@ stages:
 ---
 test_name: GET /experimental/syscollector/packages
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name:  Request all agents (Partially allowed, user agnostic)
@@ -457,6 +475,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/ports
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -510,6 +531,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/processes
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
