--- a/api/test/integration/test_rbac_white_experimental_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_white_experimental_endpoints.tavern.yaml
@@ -191,6 +191,9 @@ stages:
 ---
 test_name: GET /experimental/syscollector/hardware
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Request all agents (Partially allowed, user agnostic)
@@ -242,6 +245,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/netaddr
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -295,6 +301,9 @@ stages:
 ---
 test_name: GET /experimental/syscollector/netiface
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Request all agents (Partially allowed, user agnostic)
@@ -346,6 +355,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/netproto
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -399,6 +411,9 @@ stages:
 ---
 test_name: GET /experimental/syscollector/os
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name: Request all agents (Partially allowed, user agnostic)
@@ -451,6 +466,9 @@ stages:
 ---
 test_name: GET /experimental/syscollector/packages
 
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+
 stages:
 
   - name:  Request all agents (Partially allowed, user agnostic)
@@ -488,6 +506,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/ports
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
@@ -541,6 +562,9 @@ stages:
 
 ---
 test_name: GET /experimental/syscollector/processes
+
+marks:
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
 
 stages:
 
