Add reminder to change HC in experimental and syscollector AIT

--- a/api/test/integration/test_rbac_black_experimental_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_black_experimental_endpoints.tavern.yaml
@@ -192,7 +192,8 @@ stages:
 test_name: GET /experimental/syscollector/hardware
 
 marks:
-  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -248,7 +249,8 @@ stages:
 test_name: GET /experimental/syscollector/netaddr
 
 marks:
-  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -296,7 +298,8 @@ stages:
 test_name: GET /experimental/syscollector/netiface
 
 marks:
-  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -344,7 +347,8 @@ stages:
 test_name: GET /experimental/syscollector/netproto
 
 marks:
-  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -392,7 +396,8 @@ stages:
 test_name: GET /experimental/syscollector/os
 
 marks:
-  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -440,7 +445,8 @@ stages:
 test_name: GET /experimental/syscollector/packages
 
 marks:
-  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -477,7 +483,8 @@ stages:
 test_name: GET /experimental/syscollector/ports
 
 marks:
-  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
@@ -533,7 +540,8 @@ stages:
 test_name: GET /experimental/syscollector/processes
 
 marks:
-  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829
+  - xfail  # Syscollector databases synchronization randomly fails - https://github.com/wazuh/wazuh/issues/11829.
+           # Remove xfail mark and change healthcheck when #11829 is solved.
 
 stages:
 
